change package name to lv2
see http://lv2plug.in/git/cgit.cgi/lv2.git/tree/wscript#n402 and http://lv2plug.in/git/cgit.cgi/lv2.git/tree/lv2.pc.in

--- a/visual_compressor/Makefile
+++ b/visual_compressor/Makefile
@@ -8,7 +8,7 @@ $(BUNDLE): manifest.ttl visual_compressor.ttl visual_compressor.so visual_compre
 	cp $^ $(BUNDLE)
 
 visual_compressor.so: visual_compressor.cpp visual_compressor.peg
-	g++ -shared -fPIC -DPIC visual_compressor.cpp `pkg-config --cflags --libs lv2-plugin` -o visual_compressor.so
+	g++ -shared -fPIC -DPIC visual_compressor.cpp `pkg-config --cflags --libs lv2` -o visual_compressor.so
 
 visual_compressor_gui.so: visual_compressor_gui.cpp visual_compressor.peg
 	g++ -shared -fPIC -DPIC visual_compressor_gui.cpp `pkg-config --cflags --libs lv2-gui` -o visual_compressor_gui.so
